--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -70,11 +70,17 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    position: relative;
 }
 
 .register__saved:hover {
     cursor: pointer;
     opacity: .8;
+}
+
+.register__saved:disabled {
+    opacity: .5;
+    cursor: default;
 }
 
 .register__description {
@@ -95,6 +101,11 @@
 
 .register__link:hover {
     opacity: .7;
+}
+
+.register__error_server {
+    position: absolute;
+    top: 540px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1279px){
